Fixed sortPlayersByScore